kustomize/overlays/eks/resources/whoami2/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami2
spec:
  type: ClusterIP
  selector:
    app: whoami2
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 80
