kustomize/overlays/eks/resources/whoami2/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami2
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`testnova.zpu.sh`) && PathPrefix(`/whoami2`)
      kind: Rule
      services:
        - kind: Service
          name: whoami2
          port: 80
  tls:
    certResolver: myresolver
    domains:
      - main: testnova.zpu.sh
